# SHTOOLS

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  404.html  AUTHORS.md  Contributors.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  README_DEVELOPMENT.md  SHTOOLS.html  VERSION  VERSION.txt  apt.txt  batohilm.html  batohilmrhoh.html  cilmminus.html  cilmminusrhoh.html  cilmplus.html  cilmplusrhoh.html  codemeta.json  complex-spherical-harmonics.html  computedg82.html  computedm.html  computedmap.html  contributors.html  convert.html  cross_spectrum.html  curve2mask.html  dhaj.html  djpi2.html  downcontfilterma.html  downcontfiltermc.html  eigvalsym.html  eigvalvecsym.html  eigvalvecsymtri.html  environment-dev.yml  (+272 more)
examples/cpp/: Makefile  makefile  meson.build  test.cpp
examples/notebooks/: 3d-plots.ipynb  Introduction-1.html  Introduction-1.ipynb  Introduction-2.html  Introduction-2.ipynb  Introduction-3.ipynb  Introduction.ipynb  Makefile  advanced-localized-spectral-analysis.ipynb  advanced-shcoeffs-and-shgrid-usage.ipynb  advanced-shwindow-usage.ipynb  grids-and-coefficients.ipynb  localized-spectral-analysis.ipynb  low-level-spherical-harmonic-analyses.ipynb  meson.build  spherical-harmonic-normalizations.ipynb  test_notebooks.py  tutorial_1.html  tutorial_1.ipynb  tutorial_2.html  tutorial_2.ipynb  tutorial_3.html  tutorial_3.ipynb  tutorial_4.html  tutorial_4.ipynb  tutorial_5.html  tutorial_5.ipynb  tutorial_6.html  tutorial_6.ipynb  vesta_topography.ipynb
pyshtools/: README  __init__.py  _version.py  backends.py  classes.py  constant.py  expand.py  gravmag.py  issues  legendre.py  localizedspectralanalysis.py  make_docs.py  meson.build  other.py  rotate.py  shclasses.py  shio.py  spectralanalysis.py
pyshtools/backends/: __init__.py  backends.py  ducc0_wrapper.py  meson.build  shtools.py
pyshtools/constant/: Earth.py  Mars.py  Mercury.py  Moon.py  Venus.py  __init__.py
pyshtools/constants/: Callisto.py  Ceres.py  Charon.py  Earth.py  Enceladus.py  Eros.py  Europa.py  Ganymede.py  Io.py  Jupiter.py  Mars.py  Mercury.py  Moon.py  Neptune.py  Pluto.py  Psyche.py  Saturn.py  Sun.py  Titan.py  Uranus.py  Venus.py  Vesta.py  __init__.py  meson.build
pyshtools/datasets/: Callisto.py  Ceres.py  Enceladus.py  Eros.py  Europa.py  Ganymede.py  Io.py  Jupiter.py  Mars.py  Mercury.py  Moon.py  Neptune.py  Psyche.py  Saturn.py  Titan.py  Uranus.py  Venus.py  Vesta.py  __init__.py  _utils.py  meson.build
pyshtools/doc/: .plmbar.pod.swp  Makefile  batohilmdh.doc  batohilmrhohdh.doc  cilmminusdh.doc  cilmminusrhohdh.doc  cilmplusdh.doc  cilmplusrhoh.pod  cilmplusrhohdh.doc  computedg82.doc  computedg82.pod  computedm.doc  computedmap.doc  computedmap.pod  curve2mask.doc  curve2mask.pod  dhaj.doc  djpi2.doc  downcontfilterma.doc  downcontfiltermc.doc  export_wisdom_to_file.pod  g_lsq.doc  glqgridcoord.doc  header_gspectra.html  header_io.html  header_localized.html  header_modules.html  header_other.html  header_transformations.html  headmapfile  hilm.pod  import_wisdom_from_file.pod  lsq_g.doc  make_docs.py  makecirclecoord.doc  makeellipsecoord.doc  makegeoidgrid.pod  makegeoidgriddh.doc  makegradientdh.doc  makegravgradgriddh.doc  (+111 more)
pyshtools/expand/: __init__.py  meson.build  sh_least_squares.py  spharm_functions.py
pyshtools/gravmag/: __init__.py  mag_spectrum.py  meson.build
pyshtools/legendre/: __init__.py  legendre_functions.py  meson.build  plm_index.py
pyshtools/localizedspectralanalysis/: __init__.py
pyshtools/rotate/: __init__.py  meson.build
pyshtools/shclasses/: SHCoeffs.py  SHGrid.py  SHWindow.py  __init__.py  meson.build  shcoeffs.py  shcoeffsgrid.py  shgeoid.py  shgradient.py  shgravcoeffs.py  shgravgrid.py  shgravtensor.py  shgrid.py  shmagcoeffs.py  shmaggrid.py  shtensor.py  shwindow.py  slepian.py  slepiancoeffs.py
pyshtools/shio/: __init__.py  bshc.py  common.py  convert.py  dov.py  icgem.py  meson.build  read_bshc.py  read_dov.py  read_igrf.py  shread.py  shtools.py  yilm_index_vector.py
pyshtools/shtools/: __init__.py
pyshtools/spectralanalysis/: __init__.py  cross_spectrum.py  meson.build  spectrum.py
pyshtools/utils/: __init__.py  datetime.py  figstyle.py  grid_interpolator.py  meson.build
pyshtools/wrappers/: ducc0_wrapper.py
src/: BAtoHilm.f95  BAtoHilmRhoH.f95  CbindWrapper.f95  CilmMinus.f95  CilmMinusRhoH.f95  CilmPlus.f95  CilmPlusRhoH.f95  ComputeD0.f95  ComputeDG82.f95  ComputeDMap.f95  ComputeDm.f95  Curve2Mask.f95  DHaj.f95  DownContFilter.f95  EigValSym.F95  EigValSym.f95  EigValSym2.f95  EigValVecSym.F95  EigValVecSym.f95  EigValVecSym2.f95  EigValVecSymTri.F95  EigValVecSymTri.f95  EigValVecSymTri2.f95  FFTW3.f03  FFTW3.f95  GLQGridCoord.f95  G_LSQ.f95  Hilm.f95  HilmRhoH.f95  LSQ_G.f95  MakeCircleCoord.f95  MakeEllipseCoord.f95  MakeGeoidGrid.f95  MakeGradientDH.f95  MakeGravGradGridDH.F95  MakeGravGradGridDH.f95  MakeGravGradGridDH2.f95  MakeGravGridDH.F95  MakeGravGridDH.f95  MakeGravGridDH2.f95  (+132 more)
src/doc/: Makefile  computedm.pod  curve2mask.pod  djpi2.pod  header_gravmag.html  header_gspectra.html  header_io.html  header_legendre.html  header_localized.html  header_modules.html  header_other.html  header_rotations.html  header_transformations.html  hilmrhoh.pod  makegrid2d.pod  nglqshn.pod  planetsconstants.pod  plon_d1.pod  shcindextocilm.pod  shcrosspowerspectrum.pod  shmultiply.pod  shmultitaperse.pod  shpowerspectrumc.pod  shread2.pod  shreturntapersmap.pod  tail_gravmag.html  tail_gspectra.html  tail_io.html  tail_legendre.html  tail_localized.html  tail_modules.html  tail_other.html  tail_rotations.html  tail_transformations.html  wl.pod
src/fdoc/: Makefile  batohilm.md  batohilmrhoh.md  cilmminus.md  cilmminusrhoh.md  cilmplus.md  cilmplus.pod  cilmplusrhoh.md  cilmplusrhoh.pod  computedg82.md  computedm.md  computedmap.md  curve2mask.md  delink.hs  dhaj.md  djpi2.md  downcontfilterma.md  downcontfiltermc.md  eigvalsym.md  eigvalsym.pod  eigvalvecsym.md  eigvalvecsymtri.md  eigvalvecsymtri.pod  g_lsq.md  glqgridcoord.md  header_gravmag.html  header_gspectra.html  header_io.html  (+164 more)
(+2661 files in other folders)
