SOURCES = [
  'BAtoHilm.f95',
  'BAtoHilmRhoH.f95',
  'CilmMinus.f95',
  'CilmMinusRhoH.f95',
  'CilmPlus.f95',
  'CilmPlusRhoH.f95',
  'ComputeDG82.f95',
  'ComputeDMap.f95',
  'ComputeDm.f95',
  'Curve2Mask.f95',
  'DHaj.f95',
  'djpi2.f95',
  'DownContFilter.f95',
  'EigValSym.F95',
  'EigValVecSym.F95',
  'EigValVecSymTri.F95',
  'FFTW3.f95',
  'ftypes.f95',
  'LSQ_G.f95',
  'GLQGridCoord.f95',
  'MakeCircleCoord.f95',
  'MakeEllipseCoord.f95',
  'MakeGeoidGrid.f95',
  'MakeGradientDH.f95',
  'MakeGravGradGridDH.f95',
  'MakeGravGridDH.f95',
  'MakeGravGridPoint.f95',
  'MakeGrid2D.f95',
  'MakeGridDHC.f95',
  'MakeGridDH.f95',
  'MakeGridGLQC.f95',
  'MakeGridGLQ.f95',
  'MakeGridPointC.f95',
  'MakeGridPoint.f95',
  'MakeMagGradGridDH.f95',
  'MakeMagGridDH.f95',
  'MakeMagGridPoint.f95',
  'NormalGravity.f95',
  'PlanetsConstants.f95',
  'PlBar_d1.f95',
  'PlBar.f95',
  'PLegendreA_d1.f95',
  'PLegendreA.f95',
  'PLegendre_d1.f95',
  'PLegendre.f95',
  'PlmBar_d1.f95',
  'PlmBar.f95',
  'PlmIndex.f95',
  'PlmON_d1.f95',
  'PlmON.f95',
  'PlmSchmidt_d1.f95',
  'PlmSchmidt.f95',
  'PlON_d1.f95',
  'PlON.f95',
  'PlSchmidt_d1.f95',
  'PlSchmidt.f95',
  'PreGLQ.f95',
  'Random.f95',
  'SHAdmitCorr.f95',
  'SHBiasAdmitCorr.f95',
  'SHBias.f95',
  'SHBiasK.f95',
  'SHBiasKMask.f95',
  'SHCilmToVector.f95',
  'SHConfidence.f95',
  'SHConvertCoef.f95',
  'SHExpandDHC.f95',
  'SHExpandDH.f95',
  'SHExpandGLQC.f95',
  'SHExpandGLQ.f95',
  'SHExpandLSQ.F95',
  'SHFindLWin.f95',
  'SHGLQ.f95',
  'SHLocalizedAdmitCorr.f95',
  'SHMagPowerSpectra.f95',
  'SHMTCouplingMatrix.f95',
  'SHMTDebias.F95',
  'SHMTVar.f95',
  'SHMTVarOpt.F95',
  'SHMultiply.f95',
  'SHMultiTaperCSE.f95',
  'SHMultiTaperMaskCSE.f95',
  'SHMultiTaperMaskSE.f95',
  'SHMultiTaperSE.f95',
  'SHPowerSpectraC.f95',
  'SHPowerSpectra.f95',
  'SHRead2.f95',
  'SHRead.f95',
  'SHReadJPL.f95',
  'SHReturnTapers.f95',
  'SHReturnTapersMap.f95',
  'SHReturnTapersM.f95',
  'SHRotateCoef.f95',
  'SHRotateRealCoef.f95',
  'SHRotateTapers.f95',
  'SHSCouplingMatrixCap.f95',
  'SHSCouplingMatrix.f95',
  'SHSjkPG.f95',
  'SHSlepianVar.f95',
  'SHTOOLS.f95',
  'SlepianCoeffs.f95',
  'SlepianCoeffsToSH.f95',
  'SphericalCapCoef.f95',
  'Wigner3j.f95',
  'YilmIndexVector.f95',
]

fftw3 = dependency('fftw3')

shtools = library('SHTOOLS',
  SOURCES,
  dependencies: [fftw3, lapack],
  install: true)
