python_sources = [
  '__init__.py',
  'Earth.py',
  'Mars.py',
  'Mercury.py',
  'Moon.py',
  'Venus.py',
  'Vesta.py',
  'Ceres.py',
  'Eros.py',
  'Io.py',
  'Europa.py',
  'Ganymede.py',
  'Callisto.py',
  'Titan.py',
  'Enceladus.py',
]

python.install_sources(python_sources, subdir: 'pyshtools/constants')
