python_sources = [
  '__init__.py',
  'Mercury.py',
  'Venus.py',
  'Earth.py',
  'Mars.py',
  'Moon.py',
  'Ceres.py',
  'Vesta.py',
  'Eros.py',
  'Jupiter.py',
  'Io.py',
  'Europa.py',
  'Ganymede.py',
  'Callisto.py',
  'Saturn.py',
  'Titan.py',
  'Enceladus.py',
  'Uranus.py',
  'Neptune.py',
  'Pluto.py',
]

python.install_sources(python_sources, subdir: 'pyshtools/constants')
