python_sources = [
  '__init__.py',
  'Mercury.py',
  'Eros.py',
  'Ceres.py',
  'Vesta.py',
  'Io.py',
  'Europa.py',
  'Ganymede.py',
  'Callisto.py',
  'Saturn.py',
  'Titan.py',
  'Enceladus.py',
  'Uranus.py',
  'Neptune.py',
]

python.install_sources(python_sources, subdir: 'pyshtools/datasets')

subdir('Earth')
subdir('Mars')
subdir('Moon')
subdir('Venus')
