doc_files = [
  'batohilmdh.doc',
  'batohilmrhohdh.doc',
  'cilmminusdh.doc',
  'cilmminusrhohdh.doc',
  'cilmplusdh.doc',
  'cilmplusrhohdh.doc',
  'computedg82.doc',
  'computedm.doc',
  'computedmap.doc',
  'curve2mask.doc',
  'dhaj.doc',
  'djpi2.doc',
  'downcontfilterma.doc',
  'downcontfiltermc.doc',
  'glqgridcoord.doc',
  'makecirclecoord.doc',
  'makeellipsecoord.doc',
  'makegeoidgriddh.doc',
  'makegradientdh.doc',
  'makegravgradgriddh.doc',
  'makegravgriddh.doc',
  'makegravgridpoint.doc',
  'makegrid2d.doc',
  'makegriddh.doc',
  'makegriddhc.doc',
  'makegridglq.doc',
  'makegridglqc.doc',
  'makegridpoint.doc',
  'makegridpointc.doc',
  'makemaggradgriddh.doc',
  'makemaggriddh.doc',
  'makemaggridpoint.doc',
  'normalgravity.doc',
  'plbar.doc',
  'plbar_d1.doc',
  'plegendre.doc',
  'plegendre_d1.doc',
  'plegendrea.doc',
  'plegendrea_d1.doc',
  'plmbar.doc',
  'plmbar_d1.doc',
  'plmindex.doc',
  'plmon.doc',
  'plmon_d1.doc',
  'plmschmidt.doc',
  'plmschmidt_d1.doc',
  'plon.doc',
  'plon_d1.doc',
  'plschmidt.doc',
  'plschmidt_d1.doc',
  'shadmitcorr.doc',
  'shbias.doc',
  'shbiasadmitcorr.doc',
  'shbiask.doc',
  'shbiaskmask.doc',
  'shcilmtocindex.doc',
  'shcilmtovector.doc',
  'shcindextocilm.doc',
  'shconfidence.doc',
  'shctor.doc',
  'shexpanddh.doc',
  'shexpanddhc.doc',
  'shexpandglq.doc',
  'shexpandglqc.doc',
  'shexpandlsq.doc',
  'shexpandwlsq.doc',
  'shfindlwin.doc',
  'shglq.doc',
  'shlocalizedadmitcorr.doc',
  'shmtcouplingmatrix.doc',
  'shmtdebias.doc',
  'shmtvar.doc',
  'shmtvaropt.doc',
  'shmultiply.doc',
  'shmultitapercse.doc',
  'shmultitapermaskcse.doc',
  'shmultitapermaskse.doc',
  'shmultitaperse.doc',
  'shread2.doc',
  'shread2error.doc',
  'shreadjpl.doc',
  'shreadjplerror.doc',
  'shreturntapers.doc',
  'shreturntapersm.doc',
  'shreturntapersmap.doc',
  'shrotatecoef.doc',
  'shrotaterealcoef.doc',
  'shrotatetapers.doc',
  'shrtoc.doc',
  'shscouplingmatrix.doc',
  'shscouplingmatrixcap.doc',
  'shsjkpg.doc',
  'shslepianvar.doc',
  'shvectortocilm.doc',
  'slepiancoeffs.doc',
  'slepiancoeffstosh.doc',
  'sphericalcapcoef.doc',
  'wigner3j.doc',
  'yilmindexvector.doc',
]

install_data(
  doc_files,
  install_dir: python.get_install_dir(subdir: 'pyshtools/doc'),
  install_tag: 'doc')
