python_sources = [
  '__init__.py',
  'shcoeffs.py',
  'shgeoid.py',
  'shgradient.py',
  'shgravcoeffs.py',
  'shgravgrid.py',
  'shgrid.py',
  'shmagcoeffs.py',
  'shmaggrid.py',
  'shtensor.py',
  'shwindow.py',
  'slepian.py',
  'slepiancoeffs.py',
]

python.install_sources(python_sources, subdir: 'pyshtools/shclasses')
