test(
  'TestCT',
  python,
  args: [files('TestCT.py'),
         meson.current_source_dir() / '../../ExampleDataFiles'],
  timeout: 60,
  suite: 'python')

test(
  'TestGrav',
  python,
  args: [files('TestGrav.py'),
         meson.current_source_dir() / '../../ExampleDataFiles'],
  timeout: 120,
  suite: 'python')
