test(
  'SHMTCouplingMatrix',
  python,
  args: files('SHMTCouplingMatrix.py'),
  suite: 'python')

test(
  'SHMultitaperSE',
  python,
  args: files('SHMultitaperSE.py'),
  suite: 'python')

test(
  'SHWindowsBiasOther',
  python,
  args: files('SHWindowsBiasOther.py'),
  timeout: 60,
  suite: 'python')
