benchmark(
  'TimingAccuracyDH',
  python,
  args: files('TimingAccuracyDH.py'),
  timeout: 0,
  suite: 'python')

benchmark(
  'TimingAccuracyDHC',
  python,
  args: files('TimingAccuracyDHC.py'),
  timeout: 0,
  suite: 'python')

benchmark(
  'TimingAccuracyGLQ',
  python,
  args: files('TimingAccuracyGLQ.py'),
  timeout: 0,
  suite: 'python')

benchmark(
  'TimingAccuracyGLQC',
  python,
  args: files('TimingAccuracyGLQC.py'),
  timeout: 0,
  suite: 'python')
